--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Arena</title>
     <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
-    <!--    <script type="text/javascript" src="{{ url_for('static', filename='popper.min.js') }}"></script>-->
+    <!--        <script type="text/javascript" src="{{ url_for('static', filename='popper.min.js') }}"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
             integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
             crossorigin="anonymous"></script>
@@ -12,6 +12,7 @@
     <script type="text/javascript"
             src="{{ url_for('static', filename='Bootstrap-4-Multi-Select-BsMultiSelect/dist/js/BsMultiSelect.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -35,56 +36,71 @@
 
 <script>
   $(function () {
-    let $bugTypeSelect = $("#bugTypeSelect")
-    let $rewardBugDiv = $("#rewardBugDiv")
-    $bugTypeSelect.bsMultiSelect()
-    $bugTypeSelect.change(function () {
-      $("#rewardBugSelect option").remove()
-      if (!$bugTypeSelect.val() || $bugTypeSelect.val().length <= 1) {
-        $rewardBugDiv.hide()
-      } else {
-        let $el = $("#rewardBugSelect")
-        $("#bugTypeSelect option").each(function () {
-          if (this.selected) {
-            $el.append($("<option></option>").attr("value", this.value).text(this.text)).attr('selected', true);
-          }
-        });
-        $el.bsMultiSelect("UpdateData")
-        $rewardBugDiv.show()
-      }
-    })
+    const maxBlocks = Number("{{max_blocks}}")
+    const $numBlocks = $("#numBlocks")
+    checkCurrentExperiment()
 
-    let $isAntiClockWiseDiv = $("#isAntiClockWiseDiv")
-    let $targetDrift = $("#targetDrift")
-    $("#movementTypeSelect").change(function () {
-      let movementType = $("#movementTypeSelect").val()
-      if (movementType === 'circle') {
-        $isAntiClockWiseDiv.show()
-      } else {
-        $isAntiClockWiseDiv.hide()
+    // Number of blocks listener
+    $numBlocks.change(() => {
+      let numBlocks = Number($numBlocks.val())
+      for (let i = 1; i <= numBlocks; i++) {
+        $(`#block${i}`).show()
       }
-      if (['random walk + drift', 'low horizontal', 'low horizontal + noise'].indexOf(movementType) !== -1) {
-        $targetDrift.show()
-      } else {
-        $targetDrift.hide()
+      for (let i = numBlocks + 1; i <= maxBlocks; i++) {
+        $(`#block${i}`).hide()
       }
-    })
+    }).trigger('change')
 
-    $("#experimentTypeSelect").change(function () {
-      if (isMediaExperiment()) {
-        $(".media-options").show()
-        $(".bugs-options").hide()
-      } else {
-        $(".bugs-options").show()
-        $rewardBugDiv.hide()
-        $isAntiClockWiseDiv.hide()
-        $(".media-options").hide()
-      }
-    })
-
-    $.get('/get_experiment', function (data) {
-      $("#currentExperimentName").text(data)
-    })
+    // Inside block listeners
+    for (let i = 1; i <= maxBlocks; i++) {
+      // Bug types selection listener
+      let $bugType = $(`#bugTypeSelect${i}`)
+      let $rewardBug = $(`#rewardBugDiv${i}`)
+      $bugType.bsMultiSelect()
+      $bugType.change(() => {
+        $(`#rewardBugSelect${i} option`).remove()
+        if (!$rewardBug.val() || $(`#bugTypeSelect${i}`).val().length <= 1) {
+          $rewardBug.hide()
+        } else {
+          let $el = $(`#rewardBugSelect${i}`)
+          $(`#bugTypeSelect${i} option`).each(() => {
+            if (this.selected) {
+              $el.append($("<option></option>").attr("value", this.value).text(this.text)).attr('selected', true);
+            }
+          });
+          $el.bsMultiSelect("UpdateData")
+          $(`#rewardBugDiv${i}`).show()
+        }
+      })
+      // circle movement is anticlockwise listener
+      let $isAntiClockWiseDiv = $(`#isAntiClockWiseDiv${i}`)
+      let $targetDrift = $(`#targetDrift${i}`)
+      $(`#movementTypeSelect${i}`).change(function () {
+        let movementType = $(`#movementTypeSelect${i}`).val()
+        if (movementType === 'circle') {
+          $isAntiClockWiseDiv.show()
+        } else {
+          $isAntiClockWiseDiv.hide()
+        }
+        if (['random walk + drift', 'low horizontal', 'low horizontal + noise'].indexOf(movementType) !== -1) {
+          $targetDrift.show()
+        } else {
+          $targetDrift.hide()
+        }
+      })
+      // media or bugs experiment block
+      $(`#blockTypeSelect${i}`).change(function () {
+        if (isMediaExperiment(i)) {
+          $(`.media-options${i}`).show()
+          $(`.bugs-options${i}`).hide()
+        } else {
+          $(`.bugs-options${i}`).show()
+          $(`#rewardBugDiv${i}`).hide()
+          $isAntiClockWiseDiv.hide()
+          $(`.media-options${i}`).hide()
+        }
+      })
+    }
 
     $("#stream").click(function () {
       $.post('/set_stream_camera', {camera: $("#selectStreamCamera").val()}).done(function (camera) {
@@ -108,38 +124,39 @@
         });
       })
     });
+    $("#saveExperiment").click(() => {
+      if (confirm("Please confirm save")) {
+        let experimentName = $("#experimentName").val()
+        params = {
+          name: experimentName,
+          blocks: getBlocks()
+        }
+        $.ajax({
+          url: "/save_experiment",
+          type: "POST",
+          data: JSON.stringify(params),
+          contentType: "application/json",
+          beforeSend: function () {
+            $("#record-output").text('>> saving experiment...')
+          },
+          success: function (res) {
+            $("#record-output").text(`>> experiment ${experimentName} was saved successfully`)
+          },
+          error: function (data) {
+            $("#record-output").html(data.responseText)
+          }
+        })
+      }
+    })
     $("#experiment_form").submit(function (event) {
       event.preventDefault();
       params = {
         name: $("#experimentName").val(),
         animal_id: $("#animalId").val(),
+        is_use_predictions: $(`#use_predictions${i}`).is(":checked"),
         cameras: getCheckedCameras(),
-        trial_duration: Number($("#experimentTrialDuration").val()),
-        num_trials: Number($("#experimentNumTrials").val()),
-        iti: Number($("#experimentITI").val()),
-        experiment_type: $("#experimentTypeSelect").val()
+        blocks: getBlocks()
       }
-      let extraParams = {}
-      if (isMediaExperiment()) {
-        extraParams = {
-            media_url: $("#media-url").val()
-        }
-      } else {
-        let bugTypes = $("#bugTypeSelect").val().join(',')
-        let rewardBugs = $("#rewardBugSelect").val()
-        extraParams = {
-            reward_type: $("#rewardTypeSelect").val(),
-            is_use_predictions: $("#use_predictions").is(":checked"),
-            bug_types: bugTypes,
-            reward_bugs: rewardBugs ? rewardBugs.join(',') : bugTypes,
-            bug_speed: Number($("#bugSpeed").val()),
-            movement_type: $("#movementTypeSelect").val(),
-            time_between_bugs: Number($("#timeBetweenBugs").val()),
-            is_anticlockwise: $("#isAntiClockWise").is(":checked"),
-            target_drift: $("#targetDriftSelect").val()
-        }
-      }
-      Object.assign(params, extraParams)
       $.ajax({
         url: "/start_experiment",
         type: "POST",
@@ -149,13 +166,97 @@
           $("#record-output").text('>> initializing experiment...')
         },
         success: function (res) {
-          // $("#record-output").text(res.responseText)
-          $.get('/get_experiment', function (data) {
-            $("#currentExperimentName").text(data)
-          });
+          checkCurrentExperiment()
+        },
+        error: function (data) {
+          $("#record-output").html(data.responseText)
         }
       })
     });
+
+    function getBlockFields(i, blockType = undefined) {
+      let $blockType = $(`#blockTypeSelect${i}`)
+      blockType = blockType ? blockType : $blockType.val()
+      let fields = {
+        num_trials: $(`#experimentNumTrials${i}`),
+        trial_duration: $(`#experimentTrialDuration${i}`),
+        iti: $(`#experimentITI${i}`),
+        block_type: $blockType
+      }
+      if (blockType === 'media') {
+        Object.assign(fields, {
+          media_url: $(`#media-url${i}`)
+        })
+      } else {
+        Object.assign(fields, {
+          reward_type: $(`#rewardTypeSelect${i}`),
+          bug_types: $(`#bugTypeSelect${i}`),
+          reward_bugs: $(`#rewardBugSelect${i}`),
+          bug_speed: $(`#bugSpeed${i}`),
+          movement_type: $(`#movementTypeSelect${i}`),
+          time_between_bugs: $(`#timeBetweenBugs${i}`),
+          is_anticlockwise: $(`#isAntiClockWise${i}`),
+          target_drift: $(`#targetDriftSelect${i}`)
+        })
+      }
+      return fields
+    }
+
+    const blockNumericalFields = ['num_trials', 'trial_duration', 'bug_speed', 'time_between_bugs']
+    const blockCheckFields = ['is_anticlockwise']
+
+    function getBlocks() {
+      let numBlocks = Number($numBlocks.val())
+      let blocks = []
+      for (let i = 1; i <= numBlocks; i++) {
+        let fields = getBlockFields(i)
+        let block = {}
+        for (const [name, obj] of Object.entries(fields)) {
+          if (blockCheckFields.includes(name)) {
+            block[name] = obj.is(":checked")
+          } else {
+            block[name] = blockNumericalFields.includes(name) ? Number(obj.val()) : obj.val()
+          }
+        }
+        blocks.push(block)
+      }
+      return blocks
+    }
+
+    $("#loadExperiment").click(() => {
+      let experiment = $("#cachedExperimentsSelect").val()
+      $.get(`/load_experiment/${experiment}`, (data) => {
+        loadSavedExperiment(data)
+      })
+    })
+
+    function loadSavedExperiment(data) {
+      $("#experimentName").val(data.name)
+      $numBlocks.val(data.blocks.length).trigger('change')
+      let i = 1
+      for (let block of data.blocks) {
+        let fields = getBlockFields(i, block.block_type)
+        for (const [key, value] of Object.entries(block)) {
+          if (key === 'bug_types') {
+            value.forEach((v) => {
+              $(`#bugTypeSelect${i} option`).each(function (i) {
+                if (this.value === v) {
+                  this.selected = true
+                }
+              })
+            })
+            $(`#bugTypeSelect${i}`).bsMultiSelect("UpdateData")
+          } else if (blockCheckFields.includes(key)) {
+            fields[key].prop('checked', value)
+          } else {
+            fields[key].val(value).trigger('change')
+          }
+        }
+        i++
+      }
+      $('#loadExperimentModal').modal('toggle');
+    }
+
     $("#record_form").submit(function (event) {
       event.preventDefault();
       $.ajax({
@@ -204,13 +305,13 @@
         type: "POST",
         data: JSON.stringify({
           numOfBugs: 1,
-          speed: Number($("#bugSpeed").val()),
-          bugTypes: $("#bugTypeSelect").val(),
-          rewardBugs: $("#rewardBugSelect").val() ? $("#rewardBugSelect").val() : $("#bugTypeSelect").val(),
-          movementType: $("#movementTypeSelect").val(),
-          timeBetweenBugs: Number($("#timeBetweenBugs").val()),
-          isAntiClockWise: $("#isAntiClockWise").is(":checked"),
-          targetDrift: $("#targetDriftSelect").val()
+          speed: Number($("#bugSpeed1").val()),
+          bugTypes: $("#bugTypeSelect1").val(),
+          rewardBugs: $("#rewardBugSelect1").val() ? $("#rewardBugSelect1").val() : $("#bugTypeSelect1").val(),
+          movementType: $("#movementTypeSelect1").val(),
+          timeBetweenBugs: Number($("#timeBetweenBugs1").val()),
+          isAntiClockWise: $("#isAntiClockWise1").is(":checked"),
+          targetDrift: $("#targetDriftSelect1").val()
         }),
         contentType: "application/json",
         complete: function (res) {
@@ -279,8 +380,8 @@
     ///////////////////////////////////////////////////////////////////////
     // Functions
 
-    function isMediaExperiment() {
-      return $("#experimentTypeSelect").val() === 'media'
+    function isMediaExperiment(i) {
+      return $(`#blockTypeSelect${i}`).val() === 'media'
     }
 
     function getCheckedCameras() {
@@ -301,6 +402,12 @@
 
     function appendOutput(msg) {
       $("#record-output").append(document.createTextNode('\n' + msg))
+    }
+
+    function checkCurrentExperiment() {
+      $.get('/get_experiment', function (data) {
+        $("#currentExperimentName").text(data)
+      })
     }
   })
 </script>
