--- a/Arena/templates/management/stream.html
+++ b/Arena/templates/management/stream.html
@@ -9,7 +9,7 @@
             <option value="{{cam}}">{{cam}}</option>
             {% endfor %}
         </select>
-        <button id="stream" class="btn btn-lg btn-primary mr-2">Stream</button>
-        <button id="stopStream" class="btn btn-lg btn-outline-danger">Stop Stream</button>
+        <button id="stream" type="button" class="btn btn-lg btn-primary mr-2">Stream</button>
+        <button id="stopStream" type="button" class="btn btn-lg btn-outline-danger">Stop Stream</button>
     </div>
 </div>
