--- a/Arena/templates/management/events.html
+++ b/Arena/templates/management/events.html
@@ -1,33 +1,33 @@
 <div class="col-md-3" id="events_column">
     <h3 style="text-align: center; margin-bottom: 1em">Events</h3>
     <div class="row mb-2">
-        <button id="init_bugs" class="btn btn-lg btn-primary mx-auto">Start Bugs</button>
+        <button id="init_bugs" type="button" class="btn btn-lg btn-primary mx-auto">Start Bugs</button>
     </div>
     <div class="row mb-2">
-        <button id="hide_bugs" class="btn btn-lg btn-primary mx-auto">Hide Bugs</button>
+        <button id="hide_bugs" type="button" class="btn btn-lg btn-primary mx-auto">Hide Bugs</button>
     </div>
     <div class="row mb-2">
-        <button id="calibrate" class="btn btn-lg btn-primary mx-auto">Calibrate</button>
+        <button id="calibrate" type="button" class="btn btn-lg btn-primary mx-auto">Calibrate</button>
     </div>
     <div class="row mb-2">
-        <button id="reward" class="btn btn-lg btn-primary mx-auto">Reward</button>
+        <button id="reward" type="button" class="btn btn-lg btn-primary mx-auto">Reward</button>
     </div>
     <div class="row mb-1" id="leds-div">
         <h4 class="col-sm-3 m-auto mr-3">LED:</h4>
         <div class="col-sm-3 mr-2">
-            <button id="led_light_on" class="btn btn-lg btn-primary">ON</button>
+            <button id="led_light_on" type="button" class="btn btn-lg btn-primary">ON</button>
         </div>
         <div class="col-sm-3">
-            <button id="led_light_off" class="btn btn-lg btn-outline-danger">OFF</button>
+            <button id="led_light_off" type="button" class="btn btn-lg btn-outline-danger">OFF</button>
         </div>
     </div>
     <div class="row mb-1" id="display-div">
         <h4 class="col-sm-3 m-auto">Display:</h4>
         <div class="col-sm-3 mr-2">
-            <button id="display_on" class="btn btn-lg btn-primary">ON</button>
+            <button id="display_on" type="button" class="btn btn-lg btn-primary">ON</button>
         </div>
         <div class="col-sm-3">
-            <button id="display_off" class="btn btn-lg btn-outline-danger">OFF</button>
+            <button id="display_off" type="button" class="btn btn-lg btn-outline-danger">OFF</button>
         </div>
     </div>
 
