--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -20,9 +20,15 @@
         </div>
     </div>
     <div class="form-group row pr-3">
-        <label for="timeBetweenBlocks" class="col col-form-label">Time Between Blocks</label>
+        <label for="timeBetweenBlocks" class="col col-form-label">Time Between Blocks [seconds]</label>
         <div class="col-sm-5">
             <input type="number" class="form-control" id="timeBetweenBlocks" value="300" required>
+        </div>
+    </div>
+    <div class="form-group row pr-3">
+        <label for="extraTimeRecording" class="col col-form-label">Extra Time Recording</label>
+        <div class="col-sm-5">
+            <input type="number" class="form-control" id="extraTimeRecording" value="{{extra_time_recording}}" required>
         </div>
     </div>
 
