--- a/Arena/templates/explore.html
+++ b/Arena/templates/explore.html
@@ -22,7 +22,7 @@
 
         <div class="mt-3">
             <label for="minStrikes">Minimum Number of Strikes</label>
-            <input id="minStrikes" type="number" class="form-control col-sm-3" value="1"/>
+            <input id="minStrikes" type="number" class="form-control col-sm-3" value="0"/>
         </div>
 
         <div class="mt-3">
@@ -38,6 +38,16 @@
         <div class="mt-3">
             <label for="bugType">Bug Type</label>
             <input id="bugType" type="text" class="form-control col-sm-8"/>
+        </div>
+
+        <div class="mt-3">
+            <label for="blockType">Block Type</label>
+            <input id="blockType" type="text" class="form-control col-sm-8"/>
+        </div>
+
+        <div class="mt-3">
+            <label for="experimentDir">Experiments Folder</label>
+            <textarea id="experimentDir" class="form-control col-sm-12">{{experiment_dir}}</textarea>
         </div>
 
         <div class="mt-3">
@@ -82,7 +92,9 @@
           bug_types: $("#bugType").val(),
           animal_id: Number($("#animalId").val()),
           num_of_strikes: Number($("#minStrikes").val()),
-          movement_type: $("#movementType").val()
+          movement_type: $("#movementType").val(),
+          experiment_dir: $("#experimentDir").val(),
+          block_type: $("#blockType").val()
         }),
         contentType: "application/json",
         beforeSend: function () {
