--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -130,6 +130,12 @@
                             </select>
                         </div>
                     </div>
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="bugHeightDiv{{i}}" style="display: none;">
+                        <label for="bugHeight{{i}}" class="col col-form-label">Bug Height:</label>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="bugHeight{{i}}" value="100">
+                        </div>
+                    </div>
                     <div class="form-group row pr-3 bugs-options{{i}}" id="isAntiClockWiseDiv{{i}}"
                          style="display: none;">
                         <label for="isAntiClockWise{{i}}" class="col col-form-label">Anticlockwise Circle</label>
@@ -143,6 +149,17 @@
                             <input type="number" class="form-control" id="bugSpeed{{i}}" value="2">
                         </div>
                     </div>
+                    <div class="row ml-4 mt-3">
+                        <input class="form-check-input" type="checkbox" id="isDefaultBugSize{{i}}" checked>
+                        <label class="form-check-label" for="isDefaultBugSize{{i}}">Use Default Bug Sizes</label>
+                    </div>
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="bugSizeDiv{{i}}" style="display: none;">
+                        <label for="bugSize{{i}}" class="col col-form-label">Bug Size:</label>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="bugSize{{i}}" min="50" max="250">
+                        </div>
+                    </div>
+
                     <div class="form-group row pr-3 media-options{{i}}" style="display: none">
                         <label for="media-url{{i}}" class="col col-form-label">Media File:</label>
                         <div class="col">
