--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -148,8 +148,8 @@
                         <div class="col-sm-5">
                             <input type="number" class="form-control" id="bugSpeed{{i}}" value="4">
                         </div>
-                    </div>
-                    <div class="row ml-4 mt-3">
+                    </div >
+                    <div class="row ml-4 mt-3 form-group row pr-3 bugs-options{{i}}">
                         <input class="form-check-input" type="checkbox" id="isDefaultBugSize{{i}}" checked>
                         <label class="form-check-label" for="isDefaultBugSize{{i}}">Use Default Bug Sizes</label>
                     </div>
