--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -13,6 +13,7 @@
             src="{{ url_for('static', filename='Bootstrap-4-Multi-Select-BsMultiSelect/dist/js/BsMultiSelect.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='fields.js') }}"></script>
 </head>
 
 <body>
@@ -119,12 +120,14 @@
         $("#stream_img").attr("src", "{{ url_for('video_feed') }}")
       })
     });
+
     $("#stopStream").click(function () {
       $("#stream_img").attr("src", "{{ url_for('static', filename='video_placeholder.jpg') }}")
       const sCamera = $("#selectStreamCamera");
       $(`input[value=${sCamera.val()}]`).prop("disabled", false);
       sCamera.prop("disabled", false);
     });
+
     $("#stopExperiment").click(function () {
       $.get('/stop_experiment', function (data) {
         appendOutput(data)
@@ -134,45 +137,13 @@
         });
       })
     });
-    $("#saveExperiment").click(() => {
-      if (confirm("Please confirm save")) {
-        let experimentName = $("#experimentName").val()
-        params = {
-          name: experimentName,
-          blocks: getBlocks()
-        }
-        $.ajax({
-          url: "/save_experiment",
-          type: "POST",
-          data: JSON.stringify(params),
-          contentType: "application/json",
-          beforeSend: function () {
-            $("#record-output").text('>> saving experiment...')
-          },
-          success: function (res) {
-            $("#record-output").text(`>> experiment ${experimentName} was saved successfully`)
-          },
-          error: function (data) {
-            $("#record-output").html(data.responseText)
-          }
-        })
-      }
-    })
+
     $("#experiment_form").submit(function (event) {
       event.preventDefault();
-      params = {
-        name: $("#experimentName").val(),
-        animal_id: $("#animalId").val(),
-        is_use_predictions: $(`#use_predictions`).is(":checked"),
-        time_between_blocks: Number($("#timeBetweenBlocks").val()),
-        extra_time_recording: Number($("#extraTimeRecording").val()),
-        cameras: getCheckedCameras(),
-        blocks: getBlocks()
-      }
       $.ajax({
         url: "/start_experiment",
         type: "POST",
-        data: JSON.stringify(params),
+        data: JSON.stringify(AllFields.values),
         contentType: "application/json",
         beforeSend: function () {
           $("#record-output").text('>> initializing experiment...')
@@ -186,113 +157,35 @@
       })
     });
 
-    function getBlockFields(i, blockType = undefined) {
-      let $blockType = $(`#blockTypeSelect${i}`)
-      blockType = blockType ? blockType : $blockType.val()
-      let fields = {
-        num_trials: $(`#experimentNumTrials${i}`),
-        trial_duration: $(`#experimentTrialDuration${i}`),
-        iti: $(`#experimentITI${i}`),
-        block_type: $blockType
-      }
-      if (blockType === 'media') {
-        Object.assign(fields, {
-          media_url: $(`#media-url${i}`)
-        })
-      } else {
-        Object.assign(fields, {
-          reward_type: $(`#rewardTypeSelect${i}`),
-          bug_types: $(`#bugTypeSelect${i}`),
-          reward_bugs: $(`#rewardBugSelect${i}`),
-          bug_speed: $(`#bugSpeed${i}`),
-          movement_type: $(`#movementTypeSelect${i}`),
-          time_between_bugs: $(`#timeBetweenBugs${i}`),
-          is_anticlockwise: $(`#isAntiClockWise${i}`),
-          target_drift: $(`#targetDriftSelect${i}`),
-          bug_height: $(`#bugHeight${i}`)
-        })
-        if (!$(`#isDefaultBugSize${i}`).is(':checked')) {
-          Object.assign(fields, {bug_size: $(`#bugSize${i}`)})
-        }
-      }
-      return fields
-    }
-
-    const blockNumericalFields = ['num_trials', 'trial_duration', 'bug_speed', 'time_between_bugs', 'iti', 'bug_size',
-      'bug_height']
-    const blockCheckFields = ['is_anticlockwise']
-
-    function getBlocks() {
-      let numBlocks = Number($numBlocks.val())
-      let blocks = []
-      for (let i = 1; i <= numBlocks; i++) {
-        let fields = getBlockFields(i)
-        let block = {}
-        for (const [name, obj] of Object.entries(fields)) {
-          if (blockCheckFields.includes(name)) {
-            block[name] = obj.is(":checked")
-          } else {
-            block[name] = blockNumericalFields.includes(name) ? Number(obj.val()) : obj.val()
+    $("#saveExperiment").click(() => {
+      if (confirm("Please confirm save")) {
+        let params = AllFields.values
+        $.ajax({
+          url: "/save_experiment",
+          type: "POST",
+          data: JSON.stringify(params),
+          contentType: "application/json",
+          beforeSend: function () {
+            $("#record-output").text('>> saving experiment...')
+          },
+          success: function (res) {
+            $("#record-output").text(`>> experiment ${params.name} was saved successfully`)
+          },
+          error: function (data) {
+            $("#record-output").html(data.responseText)
           }
-        }
-        blocks.push(block)
+        })
       }
-      return blocks
-    }
-
-    $("#loadMediaManual").click(function () {
-      let video = $("#manualMediaSelect").val()
-      $('#startMediaModal').modal('toggle');
-      $.ajax({
-        url: "/start_media",
-        type: "POST",
-        data: JSON.stringify({
-            media_url: video
-        }),
-        contentType: "application/json",
-        complete: function (res) {
-          appendOutput(`>> Video ${video} started manually`)
-        }
-      })
-    })
-
-    $("#media_stop").click(function () {
-      $.get('/stop_media', (data) => {})
     })
 
     $("#loadExperiment").click(() => {
       let experiment = $("#cachedExperimentsSelect").val()
       $.get(`/load_experiment/${experiment}`, (data) => {
-        loadSavedExperiment(data)
+        console.log(data)
+        AllFields.values = data
+        $('#loadExperimentModal').modal('toggle');
       })
     })
-
-    function loadSavedExperiment(data) {
-      $("#experimentName").val(data.name)
-      $numBlocks.val(data.blocks.length).trigger('change')
-      let i = 1
-      for (let block of data.blocks) {
-        let fields = getBlockFields(i, block.block_type)
-        for (const [key, value] of Object.entries(block)) {
-          if (key === 'bug_types') {
-            value.forEach((v) => {
-              $(`#bugTypeSelect${i} option`).each(function (i) {
-                if (this.value === v) {
-                  this.selected = true
-                }
-              })
-            })
-            $(`#bugTypeSelect${i}`).bsMultiSelect("UpdateData")
-          } else if (blockCheckFields.includes(key)) {
-            fields[key].prop('checked', value)
-          } else {
-            fields[key].val(value).trigger('change')
-          }
-        }
-        i++
-      }
-      $('#loadExperimentModal').modal('toggle');
-    }
 
     $("#record_form").submit(function (event) {
       event.preventDefault();
@@ -302,7 +195,7 @@
         data: JSON.stringify(Object.assign({
           exposure: Number($("#exposure").val()),
           folder_prefix: $("#videoOutputPrefix").val(),
-          cameras: getCheckedCameras(),
+          cameras: Cameras.value,
           is_use_predictions: $("#use_predictions").is(":checked")
         }, getAcquireStop())),
         contentType: "application/json",
@@ -321,8 +214,9 @@
     })
 
     const AcquireStopWithValue = ['num_frames', 'record_time'];
-    $("#acquireStopSelect").change(function (e) {
-      let isValued = AcquireStopWithValue.indexOf($("#acquireStopSelect").val()) !== -1;
+    let $acquireStopSelect = $("#acquireStopSelect")
+    $acquireStopSelect.change(function (e) {
+      let isValued = AcquireStopWithValue.includes($acquireStopSelect.val());
       let acqValue = $("#acquireStopValue");
       if (isValued) {
         acqValue.show()
@@ -336,17 +230,40 @@
         $("#record-output").text(data)
       })
     })
+
+    $("#loadMediaManual").click(function () {
+      let video = $("#manualMediaSelect").val()
+      $('#startMediaModal').modal('toggle');
+      $.ajax({
+        url: "/start_media",
+        type: "POST",
+        data: JSON.stringify({
+          media_url: video
+        }),
+        contentType: "application/json",
+        complete: function (res) {
+          appendOutput(`>> Video ${video} started manually`)
+        }
+      })
+    })
+
+    $("#media_stop").click(function () {
+      $.get('/stop_media', (data) => {
+      })
+    })
+
     $("#init_bugs").click(function (e) {
+      let blockValues = new Block(1).values
       let payload = {
         numOfBugs: 1,
-        speed: Number($("#bugSpeed1").val()),
-        bugTypes: $("#bugTypeSelect1").val(),
-        rewardBugs: $("#rewardBugSelect1").val() ? $("#rewardBugSelect1").val() : $("#bugTypeSelect1").val(),
-        movementType: $("#movementTypeSelect1").val(),
-        timeBetweenBugs: Number($("#timeBetweenBugs1").val()),
-        isAntiClockWise: $("#isAntiClockWise1").is(":checked"),
-        targetDrift: $("#targetDriftSelect1").val(),
-        bugHeight: $("#bugHeight1").val()
+        speed: blockValues.bug_speed,
+        bugTypes: blockValues.bug_types,
+        rewardBugs: blockValues.reward_bugs,
+        movementType: blockValues.movement_type,
+        timeBetweenBugs: blockValues.time_between_bugs,
+        isAntiClockWise: blockValues.is_anticlockwise,
+        targetDrift: blockValues.target_drift,
+        bugHeight: blockValues.bug_height
       }
       if (!$("#isDefaultBugSize1").is(':checked')) {
         Object.assign(payload, {bugSize: Number($("#bugSize1").val())})
@@ -443,7 +360,7 @@
 
     function getAcquireStop() {
       let d = {};
-      d[$("#acquireStopSelect").val()] = Number($("#acquireStopValue").val());
+      d[$acquireStopSelect.val()] = Number($("#acquireStopValue").val());
       return d;
     }
 
