--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -149,6 +149,12 @@
                             <input type="number" class="form-control" id="bugSpeed{{i}}" value="4">
                         </div>
                     </div >
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="backgroundColorDiv{{i}}">
+                        <label for="backgroundColor{{i}}" class="col col-form-label">Background Color:</label>
+                        <div class="col-sm-5">
+                            <input type="color" class="form-control" id="backgroundColor{{i}}" value="#e8eaf6">
+                        </div>
+                    </div>
                     <div class="row ml-4 mt-3 form-group row pr-3 bugs-options{{i}}">
                         <input class="form-check-input" type="checkbox" id="isDefaultBugSize{{i}}" checked>
                         <label class="form-check-label" for="isDefaultBugSize{{i}}">Use Default Bug Sizes</label>
