--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -1,12 +1,12 @@
 <form class="col-md-5" id="experiment_form">
     <h3>Start Experiment</h3>
-    <div class="form-group row pr-3">
-        <label for="experimentName" class="col col-form-label">Experiment Name</label>
-        <div class="col-sm-7">
-            <input type="text" class="form-control" id="experimentName" value="{{experiment_name}}"
-                   required>
-        </div>
-    </div>
+<!--    <div class="form-group row pr-3">-->
+<!--        <label for="experimentName" class="col col-form-label">Experiment Name</label>-->
+<!--        <div class="col-sm-7">-->
+<!--            <input type="text" class="form-control" id="experimentName" value="{{experiment_name}}"-->
+<!--                   required>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="form-group row pr-3">
         <label for="animalId" class="col col-form-label">Pogona ID</label>
         <div class="col-sm-5">
@@ -48,27 +48,21 @@
                     <div class="form-group row pr-3">
                         <label for="experimentNumTrials{{i}}" class="col col-form-label">Number of Trials</label>
                         <div class="col-sm-5">
-                            <input type="number" class="form-control" id="experimentNumTrials{{i}}" value="1" required>
+                            <input type="number" class="form-control" id="experimentNumTrials{{i}}" value="5" required>
                         </div>
                     </div>
                     <div class="form-group row pr-3">
                         <label for="experimentTrialDuration{{i}}" class="col col-form-label">Trial Duration
                             [sec]</label>
                         <div class="col-sm-5">
-                            <input type="number" class="form-control" id="experimentTrialDuration{{i}}" value="90"
+                            <input type="number" class="form-control" id="experimentTrialDuration{{i}}" value="20"
                                    required>
                         </div>
                     </div>
                     <div class="form-group row pr-3">
                         <label for="experimentITI{{i}}" class="col col-form-label">Inter Trial Interval [sec]</label>
                         <div class="col-sm-5">
-                            <input type="number" class="form-control" id="experimentITI{{i}}" value="180" required>
-                        </div>
-                    </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}">
-                        <label for="timeBetweenBugs{{i}}" class="col col-form-label">Time Between Bugs [sec]:</label>
-                        <div class="col-sm-5">
-                            <input type="number" class="form-control" id="timeBetweenBugs{{i}}" value="2">
+                            <input type="number" class="form-control" id="experimentITI{{i}}" value="5" required>
                         </div>
                     </div>
                     <div class="form-group row pr-3">
@@ -100,57 +94,67 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}">
-                        <label for="rewardTypeSelect{{i}}" class="col col-form-label">Reward Type</label>
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="exitHolePosition{{i}}">
+                        <label for="exitHolePositionSelect{{i}}" class="col col-form-label">Exit Hole Position</label>
                         <div class="col">
-                            <select id="rewardTypeSelect{{i}}" class="form-control col">
-                                {% for reward_type in reward_types %}
-                                <option value="{{reward_type}}">{{reward_type}}</option>
+                            <select id="exitHolePositionSelect{{i}}" class="form-control col">
+                                {% for val, label in config.get('holePositions', {}).items() %}
+                                <option value="{{val}}">{{label}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                     </div>
+<!--                    <div class="form-group row pr-3 bugs-options{{i}}">-->
+<!--                        <label for="rewardTypeSelect{{i}}" class="col col-form-label">Reward Type</label>-->
+<!--                        <div class="col">-->
+<!--                            <select id="rewardTypeSelect{{i}}" class="form-control col">-->
+<!--                                {% for reward_type in reward_types %}-->
+<!--                                <option value="{{reward_type}}">{{reward_type}}</option>-->
+<!--                                {% endfor %}-->
+<!--                            </select>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="form-group row pr-3 bugs-options{{i}}">-->
+<!--                        <label for="movementTypeSelect{{i}}" class="col col-form-label">Movement Type</label>-->
+<!--                        <div class="col">-->
+<!--                            <select id="movementTypeSelect{{i}}" class="form-control col">-->
+<!--                                {% for movementType in config.get('movementTypes', []) %}-->
+<!--                                <option value="{{movementType}}">{{movementType}}</option>-->
+<!--                                {% endfor %}-->
+<!--                            </select>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="form-group row pr-3 bugs-options{{i}}" id="targetDrift{{i}}" style="display: none;">-->
+<!--                        <label for="targetDriftSelect{{i}}" class="col col-form-label">Target Drift</label>-->
+<!--                        <div class="col">-->
+<!--                            <select id="targetDriftSelect{{i}}" class="form-control col">-->
+<!--                                {% for targetDrift in config.get('targetDrifts', []) %}-->
+<!--                                <option value="{{targetDrift}}">{{targetDrift}}</option>-->
+<!--                                {% endfor %}-->
+<!--                            </select>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="form-group row pr-3 bugs-options{{i}}" id="bugHeightDiv{{i}}" style="display: none;">-->
+<!--                        <label for="bugHeight{{i}}" class="col col-form-label">Bug Height:</label>-->
+<!--                        <div class="col-sm-5">-->
+<!--                            <input type="number" class="form-control" id="bugHeight{{i}}" value="200">-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="form-group row pr-3 bugs-options{{i}}" id="isAntiClockWiseDiv{{i}}"-->
+<!--                         style="display: none;">-->
+<!--                        <label for="isAntiClockWise{{i}}" class="col col-form-label">Anticlockwise Circle</label>-->
+<!--                        <div class="col-sm-5">-->
+<!--                            <input id="isAntiClockWise{{i}}" type="checkbox" class="form-control-sm">-->
+<!--                        </div>-->
+<!--                    </div>-->
                     <div class="form-group row pr-3 bugs-options{{i}}">
-                        <label for="movementTypeSelect{{i}}" class="col col-form-label">Movement Type</label>
-                        <div class="col">
-                            <select id="movementTypeSelect{{i}}" class="form-control col">
-                                {% for movementType in config.get('movementTypes', []) %}
-                                <option value="{{movementType}}">{{movementType}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}" id="targetDrift{{i}}" style="display: none;">
-                        <label for="targetDriftSelect{{i}}" class="col col-form-label">Target Drift</label>
-                        <div class="col">
-                            <select id="targetDriftSelect{{i}}" class="form-control col">
-                                {% for targetDrift in config.get('targetDrifts', []) %}
-                                <option value="{{targetDrift}}">{{targetDrift}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}" id="bugHeightDiv{{i}}" style="display: none;">
-                        <label for="bugHeight{{i}}" class="col col-form-label">Bug Height:</label>
-                        <div class="col-sm-5">
-                            <input type="number" class="form-control" id="bugHeight{{i}}" value="200">
-                        </div>
-                    </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}" id="isAntiClockWiseDiv{{i}}"
-                         style="display: none;">
-                        <label for="isAntiClockWise{{i}}" class="col col-form-label">Anticlockwise Circle</label>
-                        <div class="col-sm-5">
-                            <input id="isAntiClockWise{{i}}" type="checkbox" class="form-control-sm">
-                        </div>
-                    </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}">
-                        <label for="bugSpeed{{i}}" class="col col-form-label">Bug Speed:</label>
+                        <label for="bugSpeed{{i}}" class="col col-form-label">Bug Speed [cm/s]</label>
                         <div class="col-sm-5">
                             <input type="number" class="form-control" id="bugSpeed{{i}}" value="4">
                         </div>
                     </div >
                     <div class="form-group row pr-3 bugs-options{{i}}" id="backgroundColorDiv{{i}}">
-                        <label for="backgroundColor{{i}}" class="col col-form-label">Background Color:</label>
+                        <label for="backgroundColor{{i}}" class="col col-form-label">Background Color</label>
                         <div class="col-sm-5">
                             <input type="color" class="form-control" id="backgroundColor{{i}}" value="#e8eaf6">
                         </div>
